--- a/ai-logistics-form.html
+++ b/ai-logistics-form.html
@@ -222,6 +222,8 @@
         </div>
     </div>
 
+    <script src="config.js"></script>
+    <script src="form-utils.js"></script>
     <script src="thailand-data.js"></script>
     <script src="ai-logistics-form.js"></script>
 </body>
