--- a/register.html
+++ b/register.html
@@ -132,8 +132,9 @@
                         </div>
                         <div class="form-group">
                             <label for="district">ที่ตั้งบริษัท - อำเภอ/เขต</label>
-                            <select id="district" name="district" <option value="">-- เลือกอำเภอ/เขต --</option>
-                                </select>
+                            <select id="district" name="district">
+                                <option value="">-- เลือกอำเภอ/เขต --</option>
+                            </select>
                         </div>
                     </div>
                 </section>
@@ -253,6 +254,8 @@
         </div>
     </div>
 
+    <script src="config.js"></script>
+    <script src="form-utils.js"></script>
     <script src="thailand-data.js"></script>
     <script src="register.js"></script>
 </body>
