--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                     <li><a href="#tracks">หลักสูตร</a></li>
                     <li><a href="#features">ฟีเจอร์</a></li>
                     <li><a href="#certification">ใบรับรอง</a></li>
+                    <li><a href="ebook.html">E-Book</a></li>
+                    <li><a href="#corporate">องค์กร</a></li>
                     <li><a href="#corporate">องค์กร</a></li>
                 </ul>
                 <div class="nav-actions">
