--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <li><a href="#tracks">หลักสูตร</a></li>
                     <li><a href="#features">ฟีเจอร์</a></li>
                     <li><a href="#certification">ใบรับรอง</a></li>
+                    <li><a href="https://e-report.dsd.go.th/certificateservice" target="_blank">ตรวจสอบวุฒิบัตร</a></li>
                     <li><a href="ebook.html">E-Book</a></li>
-                    <li><a href="#corporate">องค์กร</a></li>
                     <li><a href="#corporate">องค์กร</a></li>
                 </ul>
                 <div class="nav-actions">
@@ -432,7 +432,8 @@
                         <li>✅ พนักงานนำเข้าและส่งออก ระดับ 1</li>
                         <li>✅ ผู้ควบคุมสินค้าคงคลัง ระดับ 1</li>
                     </ul>
-                    <button class="btn-primary">ดูหลักสูตรที่มีใบรับรอง</button>
+                    <a href="https://e-report.dsd.go.th/certificateservice" target="_blank" class="btn-primary"
+                        style="text-decoration: none; display: inline-block;">ดูหลักสูตรที่มีใบรับรอง</a>
                 </div>
                 <div class="certification-visual">
                     <div class="certificate-mockup">
