--- a/ebook.html
+++ b/ebook.html
@@ -137,6 +137,7 @@
                     <li><a href="index.html#tracks">หลักสูตร</a></li>
                     <li><a href="index.html#features">ฟีเจอร์</a></li>
                     <li><a href="index.html#certification">ใบรับรอง</a></li>
+                    <li><a href="https://e-report.dsd.go.th/certificateservice" target="_blank">ตรวจสอบวุฒิบัตร</a></li>
                     <li><a href="ebook.html" class="active" style="color: var(--text-white);">E-Book</a></li>
                     <li><a href="index.html#corporate">องค์กร</a></li>
                 </ul>
