--- a/ebook.html
+++ b/ebook.html
@@ -136,8 +136,13 @@
                     <li><a href="index.html">หน้าแรก</a></li>
                     <li><a href="index.html#tracks">หลักสูตร</a></li>
                     <li><a href="index.html#features">ฟีเจอร์</a></li>
-                    <li><a href="index.html#certification">ใบรับรอง</a></li>
-                    <li><a href="https://e-report.dsd.go.th/certificateservice" target="_blank">ตรวจสอบวุฒิบัตร</a></li>
+                    <li class="nav-item-dropdown">
+                        <a href="index.html#certification">ใบรับรอง ▾</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="https://e-report.dsd.go.th/certificateservice"
+                                    target="_blank">ตรวจสอบวุฒิบัตร</a></li>
+                        </ul>
+                    </li>
                     <li><a href="ebook.html" class="active" style="color: var(--text-white);">E-Book</a></li>
                     <li><a href="index.html#corporate">องค์กร</a></li>
                 </ul>
