--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
                     <li><a href="#home">หน้าแรก</a></li>
                     <li><a href="#tracks">หลักสูตร</a></li>
                     <li><a href="#features">ฟีเจอร์</a></li>
-                    <li><a href="#certification">ใบรับรอง</a></li>
-                    <li><a href="https://e-report.dsd.go.th/certificateservice" target="_blank">ตรวจสอบวุฒิบัตร</a></li>
+                    <li class="nav-item-dropdown">
+                        <a href="#certification">ใบรับรอง ▾</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="https://e-report.dsd.go.th/certificateservice"
+                                    target="_blank">ตรวจสอบวุฒิบัตร</a></li>
+                        </ul>
+                    </li>
                     <li><a href="ebook.html">E-Book</a></li>
                     <li><a href="#corporate">องค์กร</a></li>
                 </ul>
