--- a/ai-logistics-form.html
+++ b/ai-logistics-form.html
@@ -212,12 +212,20 @@
             <div class="success-icon">✅</div>
             <h2>ขอบคุณที่ลงทะเบียน</h2>
             <h3 class="course-title">หลักสูตร AI FOR LOGISTICS</h3>
-            <p class="queue-number">คุณได้เลขลำดับที่ <span id="queueNumber">--</span></p>
-            <p class="success-message">รอเจ้าหน้าที่ติดต่อกลับ</p>
-            <a href="https://lin.ee/epoe1vZ" target="_blank" class="btn-line">
-                <span class="line-icon">💬</span>
-                ติดต่อเรา
-            </a>
+            <p class="registrant-name">คุณ <span id="successName">--</span></p>
+            <p class="queue-number">ลำดับการสมัครที่ <span id="queueNumber">--</span></p>
+            <p class="success-message">
+                เราได้รับข้อมูลการลงทะเบียนของท่านแล้ว<br>เจ้าหน้าที่จะติดต่อกลับเพื่อยืนยันสิทธิ์</p>
+
+            <div class="modal-actions">
+                <a href="https://lin.ee/epoe1vZ" target="_blank" class="btn-line">
+                    <span class="line-icon">💬</span> ติดต่อเรา
+                </a>
+                <a href="index.html" class="btn-primary btn-explore">
+                    🔍 สำรวจข้อมูลเพิ่มเติม
+                </a>
+            </div>
+
             <button class="btn-close-modal" onclick="closeSuccessModal()">ปิด</button>
         </div>
     </div>
