อัพเดทป๊อปอัพฟอร์มสำรวจข้อมูล

--- a/ai-logistics-form.html
+++ b/ai-logistics-form.html
@@ -221,8 +221,8 @@
                 <a href="https://lin.ee/epoe1vZ" target="_blank" class="btn-line">
                     <span class="line-icon">💬</span> ติดต่อเรา
                 </a>
-                <a href="index.html" class="btn-primary btn-explore">
-                    🔍 สำรวจข้อมูลเพิ่มเติม
+                <a href="survey.html" class="btn-primary btn-explore">
+                    🔍 แบบสำรวจความต้องการเรียน
                 </a>
             </div>
 
