--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ลงทะเบียนเรียนหลักสูตรโลจิสติกส์ - สถาบันพัฒนาฝีมือแรงงาน 17 ระยอง">
-    <title>ลงทะเบียนหลักสูตร - LogiSkill</title>
+    <title>ลงทะเบียนพัฒนาทักษะโลจิสติกส์ - LogiSkill ระยอง</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,16 +52,18 @@
                     <div class="form-row">
                         <div class="form-group full-width">
                             <label for="email">อีเมล <span class="required">*</span></label>
-                            <input type="email" id="email" name="email" placeholder="example@gmail.com" required>
-                            <small class="form-hint">ระบบจะตรวจสอบการลงทะเบียนซ้ำผ่านอีเมล</small>
+                            <input type="email" id="email" name="email" placeholder="example@gmail.com" required
+                                aria-describedby="emailHint">
+                            <small id="emailHint" class="form-hint">ระบบจะตรวจสอบการลงทะเบียนซ้ำผ่านอีเมล</small>
                         </div>
                     </div>
 
                     <div class="form-row">
                         <div class="form-group">
                             <label for="phone">มือถือ <span class="required">*</span></label>
-                            <input type="tel" id="phone" name="phone" placeholder="+66 99-999-XXXX" required>
-                            <small class="form-hint">รูปแบบ: 0812345678 (10 หลัก)</small>
+                            <input type="tel" id="phone" name="phone" placeholder="+66 99-999-XXXX" required
+                                aria-describedby="phoneHint">
+                            <small id="phoneHint" class="form-hint">รูปแบบ: 0812345678 (10 หลัก)</small>
                         </div>
                         <div class="form-group">
                             <label for="lineId">Line ID <span class="required">*</span></label>
@@ -77,8 +79,8 @@
                         <div class="form-group">
                             <label for="age">อายุ <span class="required">*</span></label>
                             <input type="number" id="age" name="age" placeholder="โปรดระบุอายุ" min="18" max="65"
-                                required>
-                            <small class="form-hint">อายุ 18-65 ปี</small>
+                                required aria-describedby="ageHint">
+                            <small id="ageHint" class="form-hint">อายุ 18-65 ปี</small>
                         </div>
                     </div>
 
@@ -239,17 +241,24 @@
     </main>
 
     <!-- Success Modal -->
-    <div id="successModal" class="modal">
+    <div id="successModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="successTitle">
         <div class="modal-overlay"></div>
         <div class="modal-content success-modal">
             <div class="success-icon">✅</div>
-            <h2>ขอบคุณที่ลงทะเบียน</h2>
-            <p class="queue-number">คุณได้เลขลำดับที่ <span id="queueNumber">--</span></p>
+            <h2 id="successTitle">ขอบคุณสำหรับการลงทะเบียน</h2>
+            <p class="queue-number">บัญชีการสมัครของคุณคือ : <span id="queueNumber">--</span></p>
             <p class="success-message">รอเจ้าหน้าที่ติดต่อกลับ</p>
-            <a href="https://lin.ee/epoe1vZ" target="_blank" class="btn-line">
-                <span class="line-icon">💬</span>
-                ติดต่อเรา
-            </a>
+
+            <div class="modal-actions" style="margin-top: 1.5rem; display: flex; flex-direction: column; gap: 1rem;">
+                <a href="survey.html" class="btn-primary"
+                    style="background-color: #4f46e5; color: white; padding: 0.75rem 1.5rem; border-radius: 0.5rem; text-decoration: none; font-weight: 500;">
+                    📝 โปรดตอบแบบสอบถามเพิ่ม
+                </a>
+                <a href="https://lin.ee/epoe1vZ" target="_blank" class="btn-line">
+                    <span class="line-icon">💬</span>
+                    ติดต่อเรา
+                </a>
+            </div>
             <button class="btn-close-modal" onclick="closeSuccessModal()">ปิด</button>
         </div>
     </div>
