--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </ul>
                 <div class="nav-actions">
                     <a href="https://lin.ee/epoe1vZ" target="_blank" class="btn-secondary">รับข่าวสาร</a>
-                    <a href="register.html" class="btn-primary">ลงทะเบียน</a>
+                    <a href="#open-registration" class="btn-primary">ลงทะเบียน</a>
                 </div>
                 <button class="mobile-menu-toggle" aria-label="Toggle menu">
                     <span></span>
@@ -134,7 +134,7 @@
                                     <span>ลงทะเบียนฟรี!</span>
                                 </div>
                             </div>
-                            <button class="btn-register" data-course="ai-logistics">ดูรายละเอียดและลงทะเบียน</button>
+                            <a href="ai-logistics-form.html" class="btn-register">ดูรายละเอียดและลงทะเบียน</a>
                         </div>
                     </div>
 
@@ -167,7 +167,7 @@
                                     <span>รับวุฒิบัตรจาก กรมพัฒนาฝีมือแรงงาน</span>
                                 </div>
                             </div>
-                            <button class="btn-register" data-course="air-freight">ดูรายละเอียดและลงทะเบียน</button>
+                            <a href="airfreight-form.html" class="btn-register">ดูรายละเอียดและลงทะเบียน</a>
                         </div>
                     </div>
 
@@ -200,8 +200,7 @@
                                     <span>รับวุฒิบัตรจาก กรมพัฒนาฝีมือแรงงาน</span>
                                 </div>
                             </div>
-                            <button class="btn-register"
-                                data-course="carbon-footprint">ดูรายละเอียดและลงทะเบียน</button>
+                            <a href="cfo-form.html" class="btn-register">ดูรายละเอียดและลงทะเบียน</a>
                         </div>
                     </div>
                 </div>
@@ -526,7 +525,8 @@
                     <h2 class="cta-title">พร้อมที่จะเริ่มต้นแล้วหรือยัง?</h2>
                     <p class="cta-subtitle">ลงทะเบียนวันนี้ รับฟรี! หลักสูตรพื้นฐานโลจิสติกส์</p>
                     <div class="cta-buttons">
-                        <button class="btn-primary btn-large">เริ่มเรียนฟรี</button>
+                        <a href="#open-registration" class="btn-primary btn-large"
+                            style="text-decoration: none; display: inline-flex; align-items: center; justify-content: center;">เริ่มเรียนฟรี</a>
                         <button class="btn-secondary btn-large">ดูหลักสูตรทั้งหมด</button>
                     </div>
                 </div>
