feat: Enhance content and layout on the main and ebook pages.

--- a/ebook.html
+++ b/ebook.html
@@ -190,7 +190,9 @@
                     <p class="ebook-desc">รวบรวมเทคนิคและ Best Practices ในการบริหารจัดการคลังสินค้า
                         เพิ่มประสิทธิภาพและลดต้นทุน</p>
                     <div class="ebook-actions">
-                        <button class="btn-primary" style="width: 100%;">ดาวน์โหลด PDF</button>
+                        <a href="https://lin.ee/ws5lf1M" target="_blank" class="btn-primary"
+                            style="width: 100%; text-decoration: none; display: inline-flex; align-items: center; justify-content: center;">ดาวน์โหลด
+                            PDF</a>
                     </div>
                 </div>
             </div>
@@ -206,7 +208,9 @@
                     <p class="ebook-desc">เจาะลึกการใช้งาน AI ในอุตสาหกรรมโลจิสติกส์
                         ตั้งแต่การวางแผนเส้นทางจนถึงการพยากรณ์ความต้องการ</p>
                     <div class="ebook-actions">
-                        <button class="btn-primary" style="width: 100%;">ดาวน์โหลด PDF</button>
+                        <a href="https://lin.ee/ws5lf1M" target="_blank" class="btn-primary"
+                            style="width: 100%; text-decoration: none; display: inline-flex; align-items: center; justify-content: center;">ดาวน์โหลด
+                            PDF</a>
                     </div>
                 </div>
             </div>
@@ -222,7 +226,9 @@
                     <p class="ebook-desc">แนวทางการปรับตัวสู่ Green Logistics
                         และการจัดทำคาร์บอนฟุตพริ้นท์องค์กรสำหรับธุรกิจขนส่ง</p>
                     <div class="ebook-actions">
-                        <button class="btn-primary" style="width: 100%;">ดาวน์โหลด PDF</button>
+                        <a href="https://lin.ee/ws5lf1M" target="_blank" class="btn-primary"
+                            style="width: 100%; text-decoration: none; display: inline-flex; align-items: center; justify-content: center;">ดาวน์โหลด
+                            PDF</a>
                     </div>
                 </div>
             </div>
@@ -238,7 +244,9 @@
                     <p class="ebook-desc">คู่มือปฏิบัติงานขนส่งสินค้าทางอากาศ กฎระเบียบ IATA และขั้นตอนการนำเข้า-ส่งออก
                     </p>
                     <div class="ebook-actions">
-                        <button class="btn-primary" style="width: 100%;">ดาวน์โหลด PDF</button>
+                        <a href="https://lin.ee/ws5lf1M" target="_blank" class="btn-primary"
+                            style="width: 100%; text-decoration: none; display: inline-flex; align-items: center; justify-content: center;">ดาวน์โหลด
+                            PDF</a>
                     </div>
                 </div>
             </div>
@@ -253,7 +261,9 @@
                     <div class="ebook-author">โดย Expert Excel Thailand</div>
                     <p class="ebook-desc">เทคนิคการใช้ Excel ขั้นสูงสำหรับบริหารสต็อกสินค้า สูตรและฟังก์ชันที่จำเป็น</p>
                     <div class="ebook-actions">
-                        <button class="btn-primary" style="width: 100%;">ดาวน์โหลด PDF</button>
+                        <a href="https://lin.ee/ws5lf1M" target="_blank" class="btn-primary"
+                            style="width: 100%; text-decoration: none; display: inline-flex; align-items: center; justify-content: center;">ดาวน์โหลด
+                            PDF</a>
                     </div>
                 </div>
             </div>
