--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                     <span>ลงทะเบียนฟรี!</span>
                                 </div>
                             </div>
-                            <a href="ai-logistics-form.html" class="btn-register">ดูรายละเอียดและลงทะเบียน</a>
+                            <button class="btn-register" data-course="ai-logistics">ดูรายละเอียดและลงทะเบียน</button>
                         </div>
                     </div>
 
@@ -167,7 +167,7 @@
                                     <span>รับวุฒิบัตรจาก กรมพัฒนาฝีมือแรงงาน</span>
                                 </div>
                             </div>
-                            <a href="airfreight-form.html" class="btn-register">ดูรายละเอียดและลงทะเบียน</a>
+                            <button class="btn-register" data-course="air-freight">ดูรายละเอียดและลงทะเบียน</button>
                         </div>
                     </div>
 
@@ -200,7 +200,8 @@
                                     <span>รับวุฒิบัตรจาก กรมพัฒนาฝีมือแรงงาน</span>
                                 </div>
                             </div>
-                            <a href="cfo-form.html" class="btn-register">ดูรายละเอียดและลงทะเบียน</a>
+                            <button class="btn-register"
+                                data-course="carbon-footprint">ดูรายละเอียดและลงทะเบียน</button>
                         </div>
                     </div>
                 </div>
