--- a/ebook.html
+++ b/ebook.html
@@ -324,7 +324,8 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 LogiSkill. All rights reserved.</p>
+                <p>&copy; 2026 LogiSkill. All rights reserved. <a href="https://www.js-develop.com/" target="_blank"
+                        style="color: inherit; text-decoration: none; opacity: 0.8;">Dev-Designs</a></p>
             </div>
         </div>
     </footer>
