feat: Introduce cookie policy page and integrate cookie handling across the site.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                         </ul>
                     </li>
                     <li><a href="ebook.html">E-Book</a></li>
-                    <li><a href="#corporate">องค์กร</a></li>
+                    <li><a href="cookies.html">นโยบายคุกกี้</a></li>
+                    <li><a href="register.html">ลงทะเบียน</a></li>
                 </ul>
                 <div class="nav-actions">
                     <a href="https://lin.ee/epoe1vZ" target="_blank" class="btn-secondary">รับข่าวสาร</a>
