--- a/ebook.html
+++ b/ebook.html
@@ -312,6 +312,7 @@
                         <li><a href="index.html">หน้าแรก</a></li>
                         <li><a href="index.html#tracks">หลักสูตร</a></li>
                         <li><a href="ebook.html">E-Book</a></li>
+                        <li><a href="cookies.html">นโยบายคุกกี้</a></li>
                         <li><a href="register.html">ลงทะเบียน</a></li>
                     </ul>
                 </div>
