feat: Add new static content pages for terms, contact, FAQ, team, about, and privacy, and update existing HTML files.

--- a/index.html
+++ b/index.html
@@ -549,22 +549,12 @@
                     </p>
                 </div>
                 <div class="footer-section">
-                    <h4>หลักสูตร</h4>
-                    <ul>
-                        <li><a href="#tracks">Warehouse & Inventory</a></li>
-                        <li><a href="#tracks">Transportation</a></li>
-                        <li><a href="#tracks">Supply Chain</a></li>
-                        <li><a href="#tracks">Technology</a></li>
-                        <li><a href="#tracks">Management</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
                     <h4>เกี่ยวกับเรา</h4>
                     <ul>
-                        <li><a href="#">เกี่ยวกับ LogiSkill</a></li>
-                        <li><a href="#">ทีมงาน</a></li>
-                        <li><a href="#">ติดต่อเรา</a></li>
-                        <li><a href="#">สำหรับองค์กร</a></li>
+                        <li><a href="about.html">เกี่ยวกับ LogiSkill</a></li>
+                        <li><a href="team.html">ทีมงาน</a></li>
+                        <li><a href="contact.html">ติดต่อเรา</a></li>
+                        <li><a href="index.html#corporate">สำหรับองค์กร</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
