--- a/terms.html
+++ b/terms.html
@@ -113,8 +113,8 @@
     <main class="container">
         <div class="policy-container">
             <div class="policy-header">
-                <h1 class="hero-title">นโยบายการใช้ <span class="gradient-text">คุกกี้</span></h1>
-                <p class="hero-subtitle">เราให้ความสำคัญกับความเป็นส่วนตัวและประสบการณ์การใช้งานของคุณ</p>
+                <h1 class="hero-title">เงื่อนไข <span class="gradient-text">การใช้งาน</span></h1>
+                <p class="hero-subtitle">ข้อตกลงและเงื่อนไขในการใช้งานบริการของ LogiSkill</p>
             </div>
 
             <div class="policy-content">
@@ -198,21 +198,13 @@
                     </p>
                 </div>
                 <div class="footer-section">
-                    <h4>เกี่ยวกับเรา</h4>
+                    <h4>เมนู</h4>
                     <ul>
-                        <li><a href="about.html">เกี่ยวกับ LogiSkill</a></li>
-                        <li><a href="team.html">ทีมงาน</a></li>
-                        <li><a href="contact.html">ติดต่อเรา</a></li>
-                        <li><a href="index.html#corporate">สำหรับองค์กร</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>ช่วยเหลือ</h4>
-                    <ul>
-                        <li><a href="faq.html">คำถามที่พบบ่อย</a></li>
-                        <li><a href="privacy.html">นโยบายความเป็นส่วนตัว</a></li>
-                        <li><a href="terms.html">เงื่อนไขการใช้งาน</a></li>
+                        <li><a href="index.html">หน้าแรก</a></li>
+                        <li><a href="index.html#tracks">หลักสูตร</a></li>
+                        <li><a href="ebook.html">E-Book</a></li>
                         <li><a href="cookies.html">นโยบายคุกกี้</a></li>
+                        <li><a href="register.html">ลงทะเบียน</a></li>
                     </ul>
                 </div>
             </div>
