--- a/ebook.html
+++ b/ebook.html
@@ -307,20 +307,21 @@
                     </p>
                 </div>
                 <div class="footer-section">
-                    <h4>เมนู</h4>
+                    <h4>เกี่ยวกับเรา</h4>
                     <ul>
-                        <li><a href="index.html">หน้าแรก</a></li>
-                        <li><a href="index.html#tracks">หลักสูตร</a></li>
-                        <li><a href="ebook.html">E-Book</a></li>
-                        <li><a href="cookies.html">นโยบายคุกกี้</a></li>
-                        <li><a href="register.html">ลงทะเบียน</a></li>
+                        <li><a href="about.html">เกี่ยวกับ LogiSkill</a></li>
+                        <li><a href="team.html">ทีมงาน</a></li>
+                        <li><a href="contact.html">ติดต่อเรา</a></li>
+                        <li><a href="index.html#corporate">สำหรับองค์กร</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h4>ช่วยเหลือ</h4>
                     <ul>
-                        <li><a href="#">คำถามที่พบบ่อย</a></li>
-                        <li><a href="#">เงื่อนไขการใช้งาน</a></li>
+                        <li><a href="faq.html">คำถามที่พบบ่อย</a></li>
+                        <li><a href="privacy.html">นโยบายความเป็นส่วนตัว</a></li>
+                        <li><a href="terms.html">เงื่อนไขการใช้งาน</a></li>
+                        <li><a href="cookies.html">นโยบายคุกกี้</a></li>
                     </ul>
                 </div>
             </div>
