Update `cookies.html`, `ebook.html`, `index.html`, and remove `contact.html`.

--- a/cookies.html
+++ b/cookies.html
@@ -202,7 +202,7 @@
                     <ul>
                         <li><a href="about.html">เกี่ยวกับ LogiSkill</a></li>
                         <li><a href="team.html">ทีมงาน</a></li>
-                        <li><a href="contact.html">ติดต่อเรา</a></li>
+                        <li><a href="https://lin.ee/ws5lf1M" target="_blank">ติดต่อเรา</a></li>
                         <li><a href="index.html#corporate">สำหรับองค์กร</a></li>
                     </ul>
                 </div>
