feat: Implement online course booking form with dedicated pages, styles, and backend integration.

--- a/ebook.html
+++ b/ebook.html
@@ -148,7 +148,7 @@
                 </ul>
                 <div class="nav-actions">
                     <a href="https://lin.ee/epoe1vZ" target="_blank" class="btn-secondary">รับข่าวสาร</a>
-                    <a href="register.html" class="btn-primary">ลงทะเบียน</a>
+                    <a href="online-courses-form.html" class="btn-primary">ลงทะเบียน</a>
                 </div>
                 <button class="mobile-menu-toggle" aria-label="Toggle menu">
                     <span></span>
