--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
                                 <span class="course-duration">⏱️ 12 ชั่วโมง</span>
                                 <span class="course-level">📊 ระดับพื้นฐาน</span>
                             </div>
-                            <button class="btn-course">เริ่มเรียน</button>
+                            <a href="online-courses-form.html" class="btn-course"
+                                style="text-decoration: none; text-align: center; display: inline-block;">เริ่มเรียน</a>
                         </div>
                     </div>
 
@@ -360,7 +361,8 @@
                                 <span class="course-duration">⏱️ 18 ชั่วโมง</span>
                                 <span class="course-level">📊 ระดับกลาง</span>
                             </div>
-                            <button class="btn-course">เริ่มเรียน</button>
+                            <a href="online-courses-form.html" class="btn-course"
+                                style="text-decoration: none; text-align: center; display: inline-block;">เริ่มเรียน</a>
                         </div>
                     </div>
 
@@ -377,7 +379,8 @@
                                 <span class="course-duration">⏱️ 8 ชั่วโมง</span>
                                 <span class="course-level">📊 ระดับพื้นฐาน</span>
                             </div>
-                            <button class="btn-course">เริ่มเรียน</button>
+                            <a href="online-courses-form.html" class="btn-course"
+                                style="text-decoration: none; text-align: center; display: inline-block;">เริ่มเรียน</a>
                         </div>
                     </div>
                 </div>
