--- a/privacy.html
+++ b/privacy.html
@@ -204,7 +204,7 @@
                         <li><a href="index.html#tracks">หลักสูตร</a></li>
                         <li><a href="ebook.html">E-Book</a></li>
                         <li><a href="cookies.html">นโยบายคุกกี้</a></li>
-                        <li><a href="register.html">ลงทะเบียน</a></li>
+                        <li><a href="online-courses-form.html">ลงทะเบียน</a></li>
                     </ul>
                 </div>
             </div>
