feat: Implement new booking section with calendar cards and associated styling and structure.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <ul class="nav-menu">
                     <li><a href="#home">หน้าแรก</a></li>
                     <li><a href="#tracks">หลักสูตร</a></li>
+                    <li><a href="#booking-calendar">ปฏิทินการอบรม</a></li>
                     <li><a href="#features">ฟีเจอร์</a></li>
                     <li class="nav-item-dropdown">
                         <a href="#certification">ใบรับรอง ▾</a>
@@ -201,6 +202,59 @@
                             </div>
                             <button class="btn-register"
                                 data-course="carbon-footprint">ดูรายละเอียดและลงทะเบียน</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Booking & Calendar Section -->
+        <section id="booking-calendar" class="booking-section">
+            <div class="container">
+                <div class="section-header">
+                    <div class="registration-badge">📅 วางแผนการเรียน</div>
+                    <h2 class="section-title">ปฏิทินการอบรมและจองออนไลน์</h2>
+                    <p class="section-subtitle">ตรวจสอบวันเวลาที่สะดวกและทำการจองคิวอบรมล่วงหน้าได้ทันที</p>
+                </div>
+
+                <div class="booking-container">
+                    <div class="calendar-wrapper">
+                        <!-- Calendar Placeholder / Link -->
+                        <div class="calendar-card">
+                            <div class="calendar-header">
+                                <div class="calendar-icon">🗓️</div>
+                                <h3>Online Booking & Calendar</h3>
+                            </div>
+                            <div class="calendar-body">
+                                <p>ท่านสามารถดูตารางการอบรมทั้งหมดและทำการจองคิวผ่านระบบ Google Calendar</p>
+                                <ul class="calendar-features">
+                                    <li>✅ อัพเดทวันเวลาล่าสุดแบบเรียลไทม์</li>
+                                    <li>✅ ตรวจสอบที่ว่างในแต่ละรุ่น</li>
+                                    <li>✅ ลงนัดหมายจองล่วงหน้า</li>
+                                </ul>
+                                <a href="https://calendar.google.com/calendar/u/0/r?pli=1" target="_blank"
+                                    class="btn-primary btn-large booking-btn">
+                                    <span>🌐 เปิดระบบจองออนไลน์</span>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="booking-perks">
+                            <div class="perk-item">
+                                <div class="perk-icon">⚡</div>
+                                <h4>จองง่าย รวดเร็ว</h4>
+                                <p>ทำรายการได้ภายใน 2 นาที</p>
+                            </div>
+                            <div class="perk-item">
+                                <div class="perk-icon">📱</div>
+                                <h4>รองรับมือถือ</h4>
+                                <p>จองได้ทุกที่ ทุกเวลา</p>
+                            </div>
+                            <div class="perk-item">
+                                <div class="perk-icon">📧</div>
+                                <h4>ยืนยันทางอีเมล</h4>
+                                <p>รับการยืนยันทันทีหลังจอง</p>
+                            </div>
                         </div>
                     </div>
                 </div>
