--- a/ebook.html
+++ b/ebook.html
@@ -130,7 +130,7 @@
         <div class="container">
             <div class="nav-wrapper">
                 <a href="index.html" class="logo">
-                    <img src="logo.jpg" alt="LogiSkill" class="logo-image">
+                    <img src="logo_Logiskill_01.png" alt="LogiSkill" class="logo-image">
                 </a>
                 <ul class="nav-menu">
                     <li><a href="index.html">หน้าแรก</a></li>
@@ -299,7 +299,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="logo">
-                        <img src="logo.jpg" alt="LogiSkill" class="logo-image">
+                        <img src="logo_Logiskill_01.png" alt="LogiSkill" class="logo-image">
                     </div>
                     <p class="footer-description">
                         แพลตฟอร์มเรียนรู้โลจิสติกส์ออนไลน์<br>
