--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="nav-wrapper">
                 <a href="#home" class="logo">
-                    <img src="logo.jpg" alt="LogiSkill" class="logo-image">
+                    <img src="logo_Logiskill_01.png" alt="LogiSkill" class="logo-image">
                 </a>
                 <ul class="nav-menu">
                     <li><a href="#home">หน้าแรก</a></li>
@@ -598,7 +598,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="logo">
-                        <img src="logo.jpg" alt="LogiSkill" class="logo-image">
+                        <img src="logo_Logiskill_01.png" alt="LogiSkill" class="logo-image">
                     </div>
                     <p class="footer-description">
                         แพลตฟอร์มเรียนรู้โลจิสติกส์ออนไลน์<br>
