--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="logo.jpg" alt="LogiSkill" class="logo-image">
+                <img src="logo_Logiskill_01.png" alt="LogiSkill" class="logo-image">
             </a>
         </div>
     </header>
