feat: redesign the online course booking form with a comprehensive, responsive, and interactive UI, including new sections, input styles, and card selections.

--- a/online-courses-form.html
+++ b/online-courses-form.html
@@ -38,6 +38,15 @@
     <main class="form-page">
         <div class="container-sm">
             <header class="form-header">
+                <div class="header-decorator"></div>
+                <a href="index.html" class="btn-back">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <line x1="19" y1="12" x2="5" y2="12"></line>
+                        <polyline points="12 19 5 12 12 5"></polyline>
+                    </svg>
+                    กลับไปที่หน้าหลัก
+                </a>
                 <h1 class="gradient-text">แบบฟอร์มจองเรียนออนไลน์</h1>
                 <p>เลือกหลักสูตรที่สนใจและกรอกข้อมูลเพื่อรับสิทธิพิเศษก่อนใคร</p>
             </header>
