chore: Update content and structure across multiple site pages.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="แพลตฟอร์มรวบรวมหลักสูตรพัฒนาทักษะด้านโลจิสติกส์ ตั้งแต่ระดับปฏิบัติการไปจนถึงระดับบริหาร">
     <title>LogiSkill - แพลตฟอร์มเรียนรู้โลจิสติกส์ออนไลน์</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="imag/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
