--- a/airfreight-form.html
+++ b/airfreight-form.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="ลงทะเบียนหลักสูตร International Air Freight Management - สถาบันพัฒนาฝีมือแรงงาน 17 ระยอง">
     <title>ลงทะเบียนหลักสูตร International Air Freight Management - LogiSkill ระยอง</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="imag/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
