--- a/survey.html
+++ b/survey.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="แบบฟอร์มสำรวจความต้องการสำหรับผู้เรียน - LogiSkill">
     <title>แบบสำรวจความต้องการเรียน - LogiSkill</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="imag/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="ai-logistics-form.css">
