Update docs: Update content and structure on the index and ebook HTML pages.

--- a/ebook.html
+++ b/ebook.html
@@ -139,8 +139,8 @@
                     <li class="nav-item-dropdown">
                         <a href="index.html#certification">ใบรับรอง ▾</a>
                         <ul class="dropdown-menu">
-                            <li><a href="https://e-report.dsd.go.th/certificateservice"
-                                    target="_blank">ตรวจสอบวุฒิบัตร</a></li>
+                            <li><a href="https://e-report.dsd.go.th/certificateservice" target="_blank">ค้นหาวุฒิบัตร
+                                    (DSD)</a></li>
                         </ul>
                     </li>
                     <li><a href="ebook.html" class="active" style="color: var(--text-white);">E-Book</a></li>
@@ -282,7 +282,7 @@
                 กรมพัฒนาฝีมือแรงงาน</p>
             <a href="https://e-report.dsd.go.th/certificateservice" target="_blank" class="btn-primary btn-large"
                 style="display: inline-flex; align-items: center; gap: 0.5rem; text-decoration: none;">
-                <span>ใช้งานระบบตรวจสอบ</span>
+                <span>ตรวจสอบวุฒิบัตรอิเล็กทรอนิกส์</span>
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                     stroke-linecap="round" stroke-linejoin="round">
                     <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
