--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <li class="nav-item-dropdown">
                         <a href="#certification">ใบรับรอง ▾</a>
                         <ul class="dropdown-menu">
-                            <li><a href="https://e-report.dsd.go.th/certificateservice"
-                                    target="_blank">ตรวจสอบวุฒิบัตร</a></li>
+                            <li><a href="https://e-report.dsd.go.th/certificateservice" target="_blank">ค้นหาวุฒิบัตร
+                                    (DSD)</a></li>
                         </ul>
                     </li>
                     <li><a href="#corporate">องค์กร</a></li>
@@ -500,7 +500,7 @@
                             <li>✅ ผู้ควบคุมสินค้าคงคลัง ระดับ 1</li>
                         </ul>
                         <a href="https://e-report.dsd.go.th/certificateservice" target="_blank" class="btn-primary"
-                            style="text-decoration: none; display: inline-block;">ดูหลักสูตรที่มีใบรับรอง</a>
+                            style="text-decoration: none; display: inline-block;">ตรวจสอบวุฒิบัตรอิเล็กทรอนิกส์</a>
                     </div>
                     <div class="certification-visual">
                         <div class="certificate-mockup">
