--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="registration-content">
                             <h3 class="registration-title">เปิดรับสมัครหลักสูตร AI FOR LOGISTICS</h3>
                             <p class="registration-subtitle">การประยุกต์ใช้เทคโนโลยีปัญญาประดิษฐ์สำหรับงานโลจิสติกส์</p>
-                            <div class="registration-info">
+                            <!--               <div class="registration-info">
                                 <div class="info-item">
                                     <span class="info-icon">📅</span>
                                     <span>รุ่น 1: 14-15 และ 21-22 ก.พ. 69</span>
@@ -133,8 +133,9 @@
                                     <span class="info-icon">💰</span>
                                     <span>ลงทะเบียนฟรี!</span>
                                 </div>
-                            </div>
-                            <button class="btn-register" data-course="ai-logistics">ดูรายละเอียดและลงทะเบียน</button>
+                           </div>
+            -->
+                            <a href="online-courses-form.html" class="btn-register">ดูรายละเอียดและลงทะเบียน</a>
                         </div>
                     </div>
 
@@ -150,7 +151,7 @@
                             <h3 class="registration-title">อบรม Airfreight ฟรี!</h3>
                             <p class="registration-subtitle">International Air Freight Management</p>
                             <div class="registration-info">
-                                <div class="info-item">
+                                <!--            <div class="info-item">
                                     <span class="info-icon">📅</span>
                                     <span>12-13 และ 19-20 มีนาคม 2569</span>
                                 </div>
@@ -167,12 +168,14 @@
                                     <span>รับวุฒิบัตรจาก กรมพัฒนาฝีมือแรงงาน</span>
                                 </div>
                             </div>
-                            <button class="btn-register" data-course="air-freight">ดูรายละเอียดและลงทะเบียน</button>
+            -->
+                            </div>
+                            <a href="online-courses-form.html" class="btn-register">ดูรายละเอียดและลงทะเบียน</a>
                         </div>
                     </div>
 
                     <!-- Course 3: Carbon Footprint -->
-                    <div class="registration-card" data-course="carbon-footprint">
+                    <div class="registration-card">
                         <div class="registration-image">
                             <div class="registration-status">เปิดรับสมัคร</div>
                             <div class="placeholder-reg-image carbon-bg">
@@ -183,7 +186,7 @@
                             <h3 class="registration-title">อบรม CFO ฟรี!</h3>
                             <p class="registration-subtitle">Carbon Footprint for Organization</p>
                             <div class="registration-info">
-                                <div class="info-item">
+                                <!--                    <div class="info-item">
                                     <span class="info-icon">📅</span>
                                     <span>12-13 และ 19-20 กุมภาพันธ์ 2569</span>
                                 </div>
@@ -200,8 +203,9 @@
                                     <span>รับวุฒิบัตรจาก กรมพัฒนาฝีมือแรงงาน</span>
                                 </div>
                             </div>
-                            <button class="btn-register"
-                                data-course="carbon-footprint">ดูรายละเอียดและลงทะเบียน</button>
+            -->
+                            </div>
+                            <a href="online-courses-form.html" class="btn-register">ดูรายละเอียดและลงทะเบียน</a>
                         </div>
                     </div>
                 </div>
